--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400&display=swap" rel="stylesheet">
     <link rel="icon" type="image/ico" sizes="32x32" href="./assets/images/favicon.ico">
-    <link rel="stylesheet" href="/app/css/styles.css">
+    <link rel="stylesheet" href="./app/css/styles.css">
 
     <title>Landing Page</title>
 </head>
@@ -26,7 +26,7 @@
         </section>
     </main>
 
-    <script src="/app/js/index.js"></script>
+    <script src="./app/js/index.js"></script>
 </body>
 
 </html>
